--- a/aula06/src/App.module.css
+++ b/aula06/src/App.module.css
@@ -15,10 +15,9 @@
     .nav {
         display: flex;
         width: 100vw;
-        flex-direction: column;
         justify-content: center;
         height: 8vh;
-        background-color: antiquewhite;
+        background-color: rgb(12, 12, 12);
 
         &
         a {
@@ -28,23 +27,23 @@
         }
     }
 
-    .main {
+    main {
         display: flex;
         width: 100vw;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         height: 70vh;
-        background-color: bisque;
+        background-color: rgb(71, 71, 71);
     }
-    .footer {
+    footer {
         display: flex;
         width: 100vw;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         height: 10vh;
-        background-color: bisque;
+        background-color: rgb(0, 0, 0);
         color: white;
         font-size: 2rem;
     }
